manifests/tests/http-svc-nodeport.yaml
# From https://github.com/kubernetes/ingress-nginx/blob/master/docs/examples/http-svc.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: http-svc
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: http-svc
    spec:
      containers:
      - name: http-svc
        image: gcr.io/google_containers/echoserver:1.8
        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: http-svc
  labels:
    app: http-svc
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  type: "NodePort"
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 32080
    protocol: TCP
    name: http
  selector:
    app: http-svc
