manifests/tests/ssh-test-efs.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: ssh-test-efs
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ssh-test-efs
    spec:
      containers:
      - name: ssh-test-efs
        image: rastasheep/ubuntu-sshd:16.04
        ports:
        - containerPort: 22
        volumeMounts:
          - name: efs-pvc
            mountPath: "/mnt"
      volumes:
        - name: efs-pvc
          persistentVolumeClaim:
            claimName: ssh-efs
---
kind: PersistentVolumeClaim
apiVersion: v1
metadata:
  name: ssh-efs
  annotations:
    volume.beta.kubernetes.io/storage-class: "aws-efs"
spec:
  accessModes:
    - ReadWriteMany
  resources:
    requests:
      storage: 1Mi
---
apiVersion: v1
# https://kubernetes.io/docs/concepts/services-networking/service/
kind: Service
metadata:
  # the name ssh-test-efs here means you can reference the pod
  # using the host ssh-test.default.svc.cluster.local from within the cluster
  name: ssh-test-efs
spec:
  # allows us to set our own internal IP to reference this pod
  # in this case we care about the port
  # https://kubernetes.io/docs/concepts/services-networking/service/#choosing-your-own-ip-address
  type: ClusterIP
  ports:
  # make the service available on this port within the cluster
  - port: 22
    protocol: TCP
  # apply this service to the pod with the label app: ssh-test-efs
  selector:
    app: ssh-test-efs
